Refine section about matrix product ordering.

--- a/tutorials/dynamic-programming.ipynb
+++ b/tutorials/dynamic-programming.ipynb
@@ -10,6 +10,7 @@
     "<div align=\"right\">\n",
     "Massimo Nocentini<br>\n",
     "<small>\n",
+    "<br>November 29, 2016: `matrix_product_ordering`\n",
     "<br>November 22, 2016: `edit_distance`\n",
     "<br>September 21, 2016: Monge arrays\n",
     "</small>\n",
@@ -960,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -969,14 +970,13 @@
     "@memo_holder\n",
     "def matrix_product_ordering(o, w, op):\n",
     "    \n",
-    "    n = len(w)-1 #= len(o)\n",
+    "    n = len(o)\n",
     "    T = {(i,i):(lambda: o[i], 0) for i in range(n)}\n",
     "    \n",
     "    def combine(i,r,j):\n",
     "        t_ir, c_ir = T[i, r]\n",
     "        t_rj, c_rj = T[r+1, j]\n",
-    "        return (lambda: op(t_ir(), t_rj()), \n",
-    "                c_ir + c_rj + w[i]*w[r+1]*w[j+1])\n",
+    "        return (lambda: op(t_ir(), t_rj()), c_ir + c_rj + w(i, r+1, j+1)) # w[i]*w[r+1]*w[j+1])\n",
     "    \n",
     "    for d in range(1, n):\n",
     "        for i in range(n-d):\n",
@@ -988,14 +988,14 @@
     "\n",
     "def parens_str_proxy(w, **kwds):\n",
     "    return matrix_product_ordering(o=['▢']*(len(w)-1), \n",
-    "                                   w=w,\n",
+    "                                   w=lambda l, c, r: w[l]*w[c]*w[r],\n",
     "                                   op=lambda a, b: '({} {})'.format(a, b),\n",
     "                                   **kwds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1017,7 +1017,7 @@
        "('((▢ (▢ ▢)) ▢)', 54000)"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -1048,7 +1048,7 @@
        " (3, 3): ('▢', 0)}"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,18 +1059,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "(opt, cost), memo_table = parens_str_proxy(w={i:fibonacci(i+1) for i in range(10)}, memo_table=True)"
+    "(opt, cost), memo_table = parens_str_proxy(w={i:(i+1) for i in range(10)}, memo_table=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -1078,10 +1078,10 @@
     {
      "data": {
       "text/plain": [
-       "('((((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 3024)"
+       "('((((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 328)"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): ('▢', 0),\n",
+       " (0, 1): ('(▢ ▢)', 6),\n",
+       " (0, 2): ('((▢ ▢) ▢)', 18),\n",
+       " (0, 3): ('(((▢ ▢) ▢) ▢)', 38),\n",
+       " (0, 4): ('((((▢ ▢) ▢) ▢) ▢)', 68),\n",
+       " (0, 5): ('(((((▢ ▢) ▢) ▢) ▢) ▢)', 110),\n",
+       " (0, 6): ('((((((▢ ▢) ▢) ▢) ▢) ▢) ▢)', 166),\n",
+       " (0, 7): ('(((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 238),\n",
+       " (0, 8): ('((((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 328),\n",
+       " (1, 1): ('▢', 0),\n",
+       " (1, 2): ('(▢ ▢)', 24),\n",
+       " (1, 3): ('((▢ ▢) ▢)', 64),\n",
+       " (1, 4): ('(((▢ ▢) ▢) ▢)', 124),\n",
+       " (1, 5): ('((((▢ ▢) ▢) ▢) ▢)', 208),\n",
+       " (1, 6): ('(((((▢ ▢) ▢) ▢) ▢) ▢)', 320),\n",
+       " (1, 7): ('((((((▢ ▢) ▢) ▢) ▢) ▢) ▢)', 464),\n",
+       " (1, 8): ('(((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 644),\n",
+       " (2, 2): ('▢', 0),\n",
+       " (2, 3): ('(▢ ▢)', 60),\n",
+       " (2, 4): ('((▢ ▢) ▢)', 150),\n",
+       " (2, 5): ('(((▢ ▢) ▢) ▢)', 276),\n",
+       " (2, 6): ('((((▢ ▢) ▢) ▢) ▢)', 444),\n",
+       " (2, 7): ('(((((▢ ▢) ▢) ▢) ▢) ▢)', 660),\n",
+       " (2, 8): ('((((((▢ ▢) ▢) ▢) ▢) ▢) ▢)', 930),\n",
+       " (3, 3): ('▢', 0),\n",
+       " (3, 4): ('(▢ ▢)', 120),\n",
+       " (3, 5): ('((▢ ▢) ▢)', 288),\n",
+       " (3, 6): ('(((▢ ▢) ▢) ▢)', 512),\n",
+       " (3, 7): ('((((▢ ▢) ▢) ▢) ▢)', 800),\n",
+       " (3, 8): ('(((((▢ ▢) ▢) ▢) ▢) ▢)', 1160),\n",
+       " (4, 4): ('▢', 0),\n",
+       " (4, 5): ('(▢ ▢)', 210),\n",
+       " (4, 6): ('((▢ ▢) ▢)', 490),\n",
+       " (4, 7): ('(((▢ ▢) ▢) ▢)', 850),\n",
+       " (4, 8): ('((((▢ ▢) ▢) ▢) ▢)', 1300),\n",
+       " (5, 5): ('▢', 0),\n",
+       " (5, 6): ('(▢ ▢)', 336),\n",
+       " (5, 7): ('((▢ ▢) ▢)', 768),\n",
+       " (5, 8): ('(((▢ ▢) ▢) ▢)', 1308),\n",
+       " (6, 6): ('▢', 0),\n",
+       " (6, 7): ('(▢ ▢)', 504),\n",
+       " (6, 8): ('((▢ ▢) ▢)', 1134),\n",
+       " (7, 7): ('▢', 0),\n",
+       " (7, 8): ('(▢ ▢)', 720),\n",
+       " (8, 8): ('▢', 0)}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{k:(thunk(), cost) for k,(thunk, cost) in memo_table.items()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://oeis.org/A180118"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sympy import fibonacci, Matrix, init_printing\n",
+    "\n",
+    "init_printing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "(opt, cost), memo_table = parens_str_proxy(w={i:fibonacci(i+1) for i in range(10)}, memo_table=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('((((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 3024)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt, cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -1147,7 +1266,7 @@
        " (8, 8): ('▢', 0)}"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,6 +1280,61 @@
    "metadata": {},
    "source": [
     "http://oeis.org/A180664"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def to_matrix_cost(dim, memo_table):\n",
+    "    n, m = dim\n",
+    "    return Matrix(n, m, lambda n,k: memo_table.get((n, k), (lambda: None, 0))[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAa8AAADgCAMAAACDzBk+AAAAP1BMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADFBd4eAAAAFHRS\nTlMAMquZdlQQQO0wRIlmzd0i77t8bBwggJIAAAAJcEhZcwAADsQAAA7EAZUrDhsAAB2zSURBVHgB\n7V1re+usrnSTNO8+Ta/75P//1gMINJIMFrZ79sPai3xoZJBmhFS7uUzx8vJMj8syHyNX4JPatCwv\nz+stPF5HTnbmtrzHJl2esV8vsxx/SAXeVb/u18f7o928r+v156c9fb/dHte39sIR/vV4PH7c8/nx\nuKVk+rwFbw58+bxcA9HjIabq5su1jJPl1KE4r58/bvfl5VpWBti1J41gaaBEmaKPwdD9+ghM98+v\nBvo9/oV7PJsdSYu+lGRXIAj/ip6vz/eVixy4fwSi68eydHlHwO97iufAd7rgP/0/zJ8/hZms7ToU\nX2YE93ek5N8PwHKINsTSmBJlSr4GQ/Xr/Tu6PEKNqo9Lqsd3cqo4vKb6f7WiF4TfnrGpz88KCIZ+\nYlN/QiG7vO+X6+VJ/eLAK/3i+e26fZd+keXUgXIEI6zl43G58a87YLEqbWFpoESZoq/FUP36SUt7\nzevW0OHoOxX40vpr90iLvje7gPC373Dq3J/Nzkbmt2dZd493jLhR3gik3/ON63uMCo+v94/cr2w5\ndaCo8DMzCkv+bgCWA6yBpYESZQreKwzVL7pyvKXffgsdjj9SQZr9env+hF/wR/MqZ8Kd6+GPPo0d\n75htrp4JfLtVVqKHHkvpV7acOnD0dr8AywFVIy0NlKpMKwzZr/sz/QV6e24u8bN1+i2X5/O93a6c\nawm/f/JlvrqK58fL48avXjzvCJGrpwOXcqWrkqTB96/Sr2z11QGMwrq8v9+u9IoMsG3qOJOWtqKk\nMq0xZL++6C/lC/5gVpjeNmYfz+cH/Q2pBNJQDv96fF43PcPVMp6o3+nVi+udsKlfKnDrdC8p3sNv\nJ51fxeqqQwxfn1/xCvOVXpEVsELTeM5Ls5RUpgqG7lc6v7b79Skv0TqJ18vb5zP+adp4IPyx6Xl/\nptP4ml/zLdveibD0Swbew9sV5xFPc+pXsb7oOrNdh4i67lfi+ol/wgtYGtn8EZdmKalMFQzZr9VJ\nWaG5ppZWJpblPXby9iwVrvrI8O9NT3r1+M7vHra9I1mungq8bb6miVGv8eqV+sVWTx1iaGFUVji4\nhpdKDBb9nEdYmqGkMtUwZL8W+qP32nq9EWhv7XYt3+kF3ctGdAn/Sp4/W57LZ6r0e3iT1uMdK5L7\nhcAwZt69RDf9uMff4dQvWB11IJDV+XVJSYe3qAJM8+kjLE2VnqpcxVD9iu92wnnSfEGxvMZ2EYkm\nDkfl0nNpvkDkcLrWbffrkl4fxvOrxztmk6uHwJhT++pNC3i9xMfz+3KDld71bdaBYgsjuL9Tv67P\nuwDLvtUnLE2WPle5iqH6RW/a4mcK9Qd9NoI3hNqLzq/lp7xv0rPhiMPp7eknv8NaeUbn/GcovOZI\nv0Xb3hEh9wuBEWTjeiBY+f0ykXl1KJGr84vY6AwPToAtEeYZSxOUXKbkbDBUv5bP+HnUd+sTwq/P\n8Fnc9dJ6Q/yWXhu+N98MIPw9noKv228blku4Ut3j68Mu7wBYqseBkaOvX09+1U/Wdh246IWRudPn\nS+/5Fzd8gsOwHKINsTSmRJmSr8HQ/bo/wif2rXaF98vp0erX8hI+XuV3TDqxeCTC367hk+PtF5Lh\nFdb1Srl0eV8v388PuhZz4PJF7wfWuaiRx8/zmSOztV2HHAxGWF/Xx6W8UQGsYlMHWBpTijKFGnBq\nOUz3S2HNgwErMPs1YFM2Upr92ijOgFOzXwM2ZSOl2a+N4gw4Nfs1YFM2Upr92ijOgFOzXwM2ZSOl\n2a+N4gw4Nfs1YFM2Upr92ijOgFO6XxAtVlN1psPHXVnhWY0OQsJNuekqaBtt5Y6BEqjVm5hfWfSR\nuBBvOsrXFUAZAGPfYgUlS3URCavghy+74rcO5SNeFi3yvDKcaRZqqiA+UELIIu7k2ZUh0XzvEF6c\nEKjVmysGDKSvNYV4M32q31a+lsDCCG5mVIst/qtnQcm1RSQsBKp+QbQIB2E50wsLNUWMMCGEFAJL\nMW9MRuvyFk4cqNWbBl4ekigT4k1P+ZpiwQgLjFisJLI2KFFbRMJCnOoXRItwEJYzDaGmiBGmEkLi\nqyPhIU2F5nrHyOwkAr0vlzNfFmVCvOkpX0ueSKtYzKgWW/xXz6BEbREJC4GqXxAtwkFYzrQRaopA\nMpUQsixw5VUGFJrrHaOykwjk6hXQ+rMUZSbxpqd8LTBIq1jMqBZb/OvPTb1oDUP2y4h0LLozvRih\npg3Px1kvWhbY8ArfzUq9qOsdYbKTCBTqzSZP+P6a9aLhC21SsXYpX5kR3IthLOLYDfZNvWiM0xiy\nX1a0aFicaSPUNMHlsMhNvQ5oNM87oZOTDIR6s9BXnoUoE7rUDuVrgEJaxdKMZbEV1jK0qReNTgZD\n9yu9LmrpJK2msVDmZ6vwNNP5sOhFywLrXlHZJGWfnndCIScdGCaSerNFE8a1KJN0qT3K1xCKtGBJ\nxrLYDfaYQFMvGuMMhuyXc8FzpvP/B0HhWcuS9aJqgTVPLftsS+wQmyFVYJiN6s2NhxVlRl1qj/I1\nQmIRsMJwYeTFbtDHqZZeNM5ZjNivf57/xKnwNyP9uWzqRZ1pJdQkQPsTclO1QOsWjxWa6x0jshMC\nWb0ZZxsPIcqEeLND+ZrgkFa2FCMW2+AuUs4oxFS1RSSsjPFv+X5ZihYrHM60FGpWosOQkJtiqXXX\nRaG53hGk1IyFpqzebFDEYSHKZPFmh/KVEJFWtiSjWGyTnymVRBWRsAqEvB4uQrRY5uWzMy2FmjKM\nbSmExFJ5WhsKzfWOsdkJgUa9qfHVURJlQrzpKl9zMNLKlmCUi1Vc8gCUoraIhMVBql+OXtSbFkJN\nxheGEkJiqcJDmRLN9w6hxYkDjXpToeuDJMqEeNNTvpbgwsjcYFSLLf6rZ1CitoiEhUDdLxYtwkFa\nzjQUnjKIbSGEhMCSZ9cGyz67vIUTB0r15hqfR4ooE+JNR/lKkWCExYxiscxTMUDJtUUkLETqfmF8\nWmNWYPZrzL60spr9alVmzPHZrzH70spq9qtVmTHHZ7/G7Esrq9mvVmXGHI/9uodNxebjz6jAV/j3\nVeht/oyc/+Ys5/Xwz+r+7Nef3C9HEHpueqmJI7ur5XALcEB6G54mT+lUhKZxgj4cB9jKgpoTVsjy\ncUnfj2JsFagGCiXWhzJVMPT5xaJFBckH56Zr4kiGNsZaielwC3CoN7tkn3CC0DRm422NAzWnsL7D\nThVf8esYjJmV6UNQ8vqwkhqG6hdEixo1H52bDt93lF1FHSDoL2E5IQIcMV2yT+EEoWlYsN3Yc1UR\nqDmFlb4rvYRfAYytAuUAU2J9KFMNQ/ULokWJyfa56aUmjmRsY6y+WXK4BXhAytFdsk84CaFpOEl4\nz1GTGR9CzQmLtkx9hPdIGOOAigFKrA9lqmGofjmC0HPTlK4RR1bWkIZW/XK4BXgwc3SX7BNOQmga\nVVNlz9FWilBzsnWnzWhu4f8ReKwVnsZBadaXylTDkP1yBFDnpinv+maa6zXZfjncAjyaJbpL9slO\nQmiqNKTr7MQI1JzRIv0GthDHrAgRJlOa9cntVDWG7JcjCD03HbNsiCPFAopZKl5q73AL8GhydJfs\nMztJoanQkJaM6s9QcyYrXgnjxkt5izrM1qNBqdYH2WoIMxi6X+m10kG9qCMnzRnXxJGVxXDFc+37\nwSNYie6SfRYnKTTVGtJKfmUIak6yPsLHRa+PsrEjZou/fgalXR/JVqO3wZD9Mielxo6S29TO1nbM\nznRBW4sjy4x8LhUvte8Hjyg5ukv2CScITa2GVGambKg5ixVucvLyyP9PV8ZUiDpgytX6omw1PixG\n7Ncv6UXpT2ZTbSr2CfU8ueIh4Vx7LwRiT8R0yT7hxEJToSGNJWs/oOaEFbzzjQvUWB2EKYVeVK8k\nnSIi+Bf1oo6cVOwT6nlyl0KiuV9eCJSXHNMl+xROrFAVGlJRqbUJNSes6PVBMulY6sZerAWLKYVe\nVK5E48YoeT08qRelt3zt3Umr4siSuXm210MvNb0JaY7ukn3CCULTlAyla/KSh1BzspW2qnxJgn0e\nkyHWBiWKhzJhQ1bEqX5BtAgHafEemHIQtjNdE0ciWFurfnmpCXA+J7tkn8KJhaYpF7Oxp84vHEHN\nCesWtli9p43zMbYKlAOg5OJhJTUM3S8WLUpM2Oeml4o4EtjSgv4SlsMtwBHTJfsUTiw0De+X7cae\nMr9kQ80JKypmaYdVMbaKlANMifVxmWoYul8SadojVmD2a8SutHOa/WrXZsSZ2a8Ru9LOafarXZsR\nZ2a/RuxKO6fZr3ZtRpyJ/Zp60RE7U89p6kXrdRl1dF4PR+1MPa/Zr3pdRh3V/YJosZrvuWmCdDAM\nLxSTPXH0mfim3tLgl0PwYIfQMtd6FjzhPls/6c6oIcuiF+WxVnwchz/WBwsMjKH7xaJFnlfGuWmC\ncjAyX9aLCsVkT5zZJlREq2WIgzUP7xAavKBaFSHFhK4T1p31ohgr/rVn+C9YH1s1DNUviBZr4Pk7\nqObt6p1oguxxguITismeOLtNKKKrywka3HIPe+HJd5THbD0auk5Y9P1j1ItirB5No/DH+mDVMFS/\nIFqskpybJkgHo/CWbxzTveHiHdU74lbbhNb0loUgP694Ft5xMnjgWzgTFg+h64QFvSjGKqE8BH+s\nD1YNQ/XLiBYZNhvnpgnEwSiUuVJQTHbESYlnU29ZCPLziqe/Xwkh8bAl9KI8lomqT8If64NVw5D9\nWol0NMm5acJyMJhQ/WYHxWRHXGWb0ASn9ZbMQIblCWIZ3FF++/yKANB1kqX1opg1rHzI/lgfrORl\nMWS/lGiRMdk4N00wDgZzyTpGxaQfJySeW3pLZiDD8oTtLfmO8s71kOWvAakwSr1oGTOM6pD9sT5Y\nAhdBul9JPfX/qRe1ukgkoi1Zx6iY9OO0xLOpt9Q06gwSysy8J6nMwgTmQ/CQpfWimK1HBylV1pdi\nfbAoxmDIfplT0XKcmyY0B4MpRaWSYtKNsxLPlt6SGciwPHk67xAqZk0cHxaetEtoGJV60TLGzhUj\n+2N9sLI3GOJA7Nd/SC+a+OmvaVtUmpNEpbLq0okTEs9tvWXGL08rHr1D6NY2tOCBRbBRL2rHCmHt\nOfpjfbBqGP9BvWhK1dN95vVwHYti0okTEs9tvaWp14pH7hCqrpYmMGyem5qZ9nJli5yiXhSzq8DV\nQPTH+mDVMOT10BNl0ju5piDUmaY0u5zwl55Vl11xSWq5rbc0xSr9Yh7SP5NOertf4IEFvSjGDKM6\nhD/WB6uGofrliTJZ06hI+cCZJr8up1IpoZjsiTPbhIpoztEYuV/wTJ8BlTvKl26aIDqErhMW9KIY\nqwbnQfiL0vNKaxi6XxAtVlnOTROkg5GcWPEpFJN+XJF4buot1bpqPLxD6MKzKgYHzCO0qqwXFWOI\nWFvwx/pggYEjdb94eBqDVmD2a9DGNNKa/WoUZtDh2a9BG9NIa/arUZhBh2e/Bm1MI63Zr0ZhBh2O\n/eLPDwfNcaaFCqjPDzE8rUErMK+HgzamkdbsV6Mwgw7rfkGqWE333DRBOhiGt98bOk9oP/ujscko\nLCCapPKhnqdP+DEGqx6tRyka3FFI+v5It53XQLpfLFXUaOXo3DShOBiFKj/3e7POU6hE/eiiCE1f\no6Qb0MNiRJNTOdTztB0pxmAVf/tcuOM4RYNbyEc1kOoXffVyVBDqRFO6XU68sh3erPOE9tOLhiIU\nm4zCwr3lOR1tMGMcztuRYgyWjspH4Ea04BapayDVL0gVqxznpgnSwTC8O7xZ5wmVaEd0/oYLm4zC\nUkpEk1c6ZMZwVLYjxRisWmwcw7drOVpwi9Q1kOoXSQfeynZwlujcNKE5GIZyhzcva5fGNNcMm4zC\n2tWvolXlLNxo2a8cLbjFwgEZiyP7tZLm6OqdmyYsB0MTejv4KW+p8wwTfRpT/h3nTUbD5mrP90fa\nb9IgKrZ4IOZZq4oxWKvAPMDnF6ILtyyTBpL9UlLFNcu5acJzMAzpHm+p86RdOXuiuWbYiZQtjWhS\nC4eYh1YVY7DWkTRSuBG9FG6ZugbS/UovUEbQi9KKrHaytXIe53vP92lMcU0qm4zGGzK/fT7DHeLz\ngxHLgHlO81qruiAGlgmLh6VfiGbu1cIZKPar/L+5PAsr+OemCdDBMKz7vEOwuhN8T3SuGTYZhUW5\nFESTGR/GeatVRQwsDoCRuREN7lXqDKT+35z+yjXFnOemKVEHA6tJVr+31nmm64TQYBpYHOaaYZNR\nWAoREWzxvNCq8tgCiwOsQdwiGtwidQMkr4dCtGix0zGUjEemKcbBMMD93lLn2akxjVy5ZuEiEx+X\nd7HdqESkaf2T54VWlcfyzubXpCTVcXxE3IgW3KITgEyBql/0Lu2oINSJpjy7nHhJ/d50RiWdJ2s/\nO6LV+bX8fC3YblQgcj7SMPNJ3IkxWDJG2Zk7jaVocAvlrgFS/RKiRYVcDljJWAb0szNNzl1OjNvt\nDZ0ntJ/ecgJLrhk2GYUFRM5GGWY+aVUxBksFyQPZrxQN7vB+JPz7+v07fIBogHS/IFWUwGyfmyYY\nB4O59nqzznOHxhSKUGwyCosRTU7lUM4XrSrGYBV//QxubGYK7gVl0kC6XxpyHo1Xgdmv8XqyldHs\n11Z1xpub/RqvJ1sZzX5tVWe8udmv8XqyldHs11Z1xpuL/Zp60fH60spo6kVblRlzfF4Px+xLK6vZ\nr1ZlxhzX/YJKsZrtuWmCdDAM7z7vvQxQloJWaDbDIH3Wj1lhvXxewmai4RG/8L096LZEId+8v2j4\nVPBxI8WnCIIJbljACRsV3QN52rNUAel+OQLLc9OUq4OBBSVrn/dOBqEsxV6i6fuLpByNaBs3pX9/\n0iPolzhG7BeKO81TVuYnuGEBJ+xkFMGjUiDcTyyIE/g7LtUv+sLoz9SLcj2cRbBf+Hoy3dLzO9xD\nHupNodkMnls3pb9+JajQLsRgv9CF7zQvCIUJbljACRuBPS43ItBAql9CpSig2Tw3TTAOBnMd8d4b\nA2VpiMzfRgnNJlSgJis6TL/8S7ziIQb7heJO89Vgcb96ZAGc8LtUwgyQ6hfJJf5MvWhZX5Y+NBfB\nfvG+1vEEi7vNhkf55vIZ9WMkQOy4Kf1b2A8v3NI6x4j9QnGn+Qi+foAbFuMEd+6XAZL9WqlyNM25\nacJyMDThLr1oCd3HEKLy/qPl217oRXtuSv+TaDmGxBbxfvR8p/mSV/UZe58mi3FCv8o2pwZI9kuq\nFCvw56YJ0MEwrPu8jzDgfu+lX6zZDK/6wilIDTF58WE+DzmG9wvFnebZt2LgXvPZKnpRiFEtkO5X\neqHzB+tFQ01WUstKneRQ2VW09Is1m+Fq6PWrKJoQU/YLxZ3mJZe1C3c4ydP1DzjkGVSiFij2679H\nLxqWufN6yPd7z/2CZhM6TltmPr59JBMx2F+U7zTPzmuDufNd5yVO8o4qUQP036IXRTX6NaYhBveM\nz/1izabQcQLbWPndGcfk6bhfKO40b2JwKLhJtCZwoBI1QPJ6KFSKQBWWo950pgmoy4k593nvZyjK\n0hBJ/SpXuMs7dJycjTXu9KuBmOwQ9wvFneZtVDkGd7YkDlSiBkj1yxFYnpumPB2Mspj8vM97NwMr\nS0OkOr+icjQ9aItPslc/X57yvIgx2C8Ud5pfhdEAuNkSelECjueWAVL9gkqxTsIixkPTFORgGOR9\n3jsZhLKU+yU1mwFu86b0r7lfiBH7heJO82ZJdAhuWMCRKlENpPsFlWKV5Nw0QToYhnef904GoSyF\nelNoNr2b0n990+exC2KwX2i8Nf0lvRM3S6JDcMMSOKFhj8s1fV6mgXS/qtBzcKAKzH4N1IyOVGa/\nOoo0kMvs10DN6Ehl9qujSAO5zH4N1IyOVGa/Ooo0kEvs19SLDtQQJ5WpF3UKNNj0vB4O1hAnndkv\np0CDTet+OfLMc9O0cgfDlGef9xEGQbiTLLiXe89frz8/6bNCKD6hAhUMwsS95mEJkWgNPEbrfjny\nzHPTlKyDIVYUzX3eRxgE4T4yaENrik8xJhhgpm0a0t2bYUmRKN/Y3gCpftHXTX+NXhTVS5azeuOd\nv5GM956vKT4xZuPoGPeahyVEohCeGiDVL0fMeW6a8nQwzOL2eR9hEIQ7yaANrSk+MSYYhIl7zcOC\n6DDI4aJvlFsZINWvv0wvKsoXTWf1xltoQ2uKT4yZOHmo72YvRKJV8BQp++VIi85NU54OhlxMsPd5\nH2EQhHvJoA0lEKv4jKPQgwoiNnGv+WyxSDRvFxaFp/RgINkvR555bpp4HQxeyhHv4zEpcl9qdLGK\nmu60dyzrTqH4DKDQg1Ju6ifuV88WthJl4SmFAEj3K8k8/i69KNdwr9CU7yVPCDXFJ/SgzKIM3Gse\nVt6dtAhPJXi0Y7/+Zr0o6rf3eghtaMQg7adWfEIPChZt4V7zsPJWovLG9gLoL9eLyvLtEpqWwKgN\nDY+s/RSKTx4rnvoZ95qHBZFo9tXgaVBeD/8+vaiq4RFx6hK1oeE/9uIfkq8vqfgsY4oCB7jXPCyI\nRLOfAqcx1S9HnnluOvOF/2YU/95Jg82fDmM17khMAtoZCG1o/i/n8P+QQvHJKtBqkgvuNQ8LIlEh\nPAU4JRn+fr3Qf6yFY0eeeW6aEncwzOr2eR9hEIT7yKANrSk+MSYIhIl7zcMSW4nWwFO0Or/ErpYC\nGqaj3nSmCafLiSn3eR9hYKrwuutxu21IPIVnMlkbWlN8ijEbR8e41zwsLRKlHQcMkO5XHXqOjlOB\n2a9xetGTyexXT5XG8Zn9GqcXPZnMfvVUaRyf2a9xetGTyexXT5XG8Yn9mnrRcfrhZTL1ol6Fxpqf\n18Ox+uFlM/vlVWised0vRzF5bpoW7mCY6uzzPsIgCI+QHQ6HSjTQrnSncvNSvjN95NL9chST56Zp\naQ6GWH8093kfYRCER8iOhkMlWtWdis1LdVaqX/QN0NSLiib0m07xDBBUolVpKDYvNbCqX45i8tw0\nJexgmFXt8z7CIAiPkB0Oh0q0Kg3F5qUmK9UvRzF5bpqW5mCI9Udzn/cRBkF4hOxceNSLtqWhS9q8\n1GQl++UohM5N08ocDLH8aO7zPsIgCI+QnQsnlWhVd5qA416ZNivZL0cxeW6aluZgiPVHc5/3EQZB\neITsTHhRiTaloWnzUpuV7tfUiwYxC/3tEK3oMnfLTQMqqUQb0lASW1nY2K9//vU/KSV77pk8z00T\nmIOxj9F4H2EQEPtSE4EneEklWpeG0ualNqv//ZfQR9Hftj/yfvSon7MIOFrrcCAB7QuHSpSi19LQ\nvHmpgZXXw6kXDbV737qFvG2xPN4nN4VKlDBW0tC8eantieqXo5g8N015ORiyAMHe532EQRAeITsc\nDpVoTXcaYMvmpSYr1a+pF6V7wIsu7DB3yU2hEm1IQ8vmpaYnul+OYvLcNC3dwTD12ed9hEEQHiE7\nHA6VaE13Gt7LlM1LdVa6X4J9mkNWYPZryLY0k5r9apZmyInZryHb0kxq9qtZmiEnZr+GbEszqdmv\nZmmGnJj9GrItzaRmv5qlGXJi9mvItjSTmv1qlmbICd0vRzF5bprW72CYIu3zPsIgCI+Q/V54RPIz\n0P3S2kSRC5nnprswDKfDaLyPMAiII2S/Fx6R/AxUv+i7lqkXFU3oN53i9QB1QKh+GW2ipTg3TWgO\nhqHc532EQRAeIfu98IjUkYHqF2kFmrdyPzdNS3MwxPqjuc/7CIMgPEL2e+ERqSMD2S+rxRHJRPPc\nNIE5GPsYjfcRBgGxLzUReJIXSD0ZyH5ZbSKQknVumsAcjH2MxvsIg4DYl5oIPMkLpJ4MdL+mXvQ/\nqhdFq5JltaFmOh3Kfjnn47lpIncwTIb7vI8wCMIjZL8XHpF6MpD9yn/vpl5UtKHfpBcLzeL1AHVA\nqH45ksdz05Swg2FWtc/7CIMgPEL2e+ERqSMD1S+jTRTJJPPcNKE5GIZyn/cRBkF4hOz3wiNSRwaq\nX0abKJIh01FEOtNdGIazC/IXYhLEETLBfTI8IvkQul9amyhyIfPcdBeG4XQYjfcRBgFxhOz3wiOS\nn4Hul2Cf5pAVmP0asi3NpGa/mqUZcmL2a8i2NJOa/WqWZsgJ6tczPtKdJYZMciYVK/CZupTuT3SL\nj3JvsFmdMSsQ/i09Ppb/A0ss60KkZ/ozAAAAAElFTkSuQmCC\n",
+      "text/latex": [
+       "$$\\left[\\begin{matrix}0 & 2 & 8 & 23 & 63 & 167 & 440 & 1154 & 3024\\\\0 & 0 & 6 & 21 & 61 & 165 & 438 & 1152 & 3022\\\\0 & 0 & 0 & 30 & 110 & 318 & 864 & 2292 & 6032\\\\0 & 0 & 0 & 0 & 120 & 432 & 1251 & 3393 & 9003\\\\0 & 0 & 0 & 0 & 0 & 520 & 1885 & 5455 & 14805\\\\0 & 0 & 0 & 0 & 0 & 0 & 2184 & 7896 & 22856\\\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 9282 & 33592\\\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 39270\\\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\end{matrix}\\right]$$"
+      ],
+      "text/plain": [
+       "⎡0  2  8  23  63   167  440   1154  3024 ⎤\n",
+       "⎢                                        ⎥\n",
+       "⎢0  0  6  21  61   165  438   1152  3022 ⎥\n",
+       "⎢                                        ⎥\n",
+       "⎢0  0  0  30  110  318  864   2292  6032 ⎥\n",
+       "⎢                                        ⎥\n",
+       "⎢0  0  0  0   120  432  1251  3393  9003 ⎥\n",
+       "⎢                                        ⎥\n",
+       "⎢0  0  0  0    0   520  1885  5455  14805⎥\n",
+       "⎢                                        ⎥\n",
+       "⎢0  0  0  0    0    0   2184  7896  22856⎥\n",
+       "⎢                                        ⎥\n",
+       "⎢0  0  0  0    0    0    0    9282  33592⎥\n",
+       "⎢                                        ⎥\n",
+       "⎢0  0  0  0    0    0    0     0    39270⎥\n",
+       "⎢                                        ⎥\n",
+       "⎣0  0  0  0    0    0    0     0      0  ⎦"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_matrix_cost(dim=(9,9), memo_table=memo_table)"
    ]
   },
   {
