Add `longest_common_subsequence` dp algorithm.

--- a/tutorials/dynamic-programming.ipynb
+++ b/tutorials/dynamic-programming.ipynb
@@ -10,6 +10,7 @@
     "<div align=\"right\">\n",
     "Massimo Nocentini<br>\n",
     "<small>\n",
+    "<br>December 1, 2016: `longest_common_subsequence`\n",
     "<br>November 29, 2016: `matrix_product_ordering`\n",
     "<br>November 22, 2016: `edit_distance`\n",
     "<br>September 21, 2016: Monge arrays\n",
@@ -25,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from functools import lru_cache\n",
     "import operator\n",
-    "from itertools import count, zip_longest\n",
+    "from itertools import count, zip_longest, chain\n",
     "from collections import OrderedDict\n",
     "from random import randint"
    ]
@@ -1335,6 +1336,466 @@
    ],
    "source": [
     "to_matrix_cost(dim=(9,9), memo_table=memo_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `longest_common_subsequence`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "@memo_holder\n",
+    "def longest_common_subsequence(A, B, gap_A, gap_B, \n",
+    "                               equal=lambda a, b: 1, shrink_A=lambda a: 0, shrink_B=lambda b: 0,\n",
+    "                               reduce=sum):\n",
+    "    \n",
+    "    T = {}\n",
+    "    \n",
+    "    T.update({(i, 0):([gap_A]*i, 0) for i in range(len(A)+1)})\n",
+    "    T.update({(0, j):([gap_B]*j, 0) for j in range(len(B)+1)})\n",
+    "    \n",
+    "    def combine(w, z):\n",
+    "        alpha, beta = zip(w, z)\n",
+    "        return list(chain.from_iterable(alpha)), reduce(beta)\n",
+    "    \n",
+    "    for i, a in enumerate(A, start=1):\n",
+    "        for j, b in enumerate(B, start=1):\n",
+    "            T[i, j] = combine(T[i-1, j-1], ([a], equal(a, b))) if a == b else max(\n",
+    "                combine(T[i, j-1], ([gap_B], -shrink_B(b))), \n",
+    "                combine(T[i-1, j], ([gap_A], -shrink_A(a))),\n",
+    "                key=lambda t: t[-1])\n",
+    "    \n",
+    "    opt, cost = T[len(A), len(B)]\n",
+    "    return (opt, cost), T\n",
+    "\n",
+    "def pprint_memo_table(T, joiner, do=str):\n",
+    "    return {k:(joiner.join(map(do, v[0])), v[1]) for k, v in T.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "(opt, cost), memo_table = longest_common_subsequence(A='ADCAAB', \n",
+    "                                                     B='BAABDCDCAACACBA', gap_A='▢', gap_B='○', \n",
+    "                                                     #shrink_B=lambda b:1,\n",
+    "                                                     memo_table=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BAABDCDCAACACBA\n",
+      "○○A○○○DC○A○A○B○\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('BAABDCDCAACACBA') \n",
+    "print(''.join(opt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): ('', 0),\n",
+       " (0, 1): ('○', 0),\n",
+       " (0, 2): ('○○', 0),\n",
+       " (0, 3): ('○○○', 0),\n",
+       " (0, 4): ('○○○○', 0),\n",
+       " (0, 5): ('○○○○○', 0),\n",
+       " (0, 6): ('○○○○○○', 0),\n",
+       " (0, 7): ('○○○○○○○', 0),\n",
+       " (0, 8): ('○○○○○○○○', 0),\n",
+       " (0, 9): ('○○○○○○○○○', 0),\n",
+       " (0, 10): ('○○○○○○○○○○', 0),\n",
+       " (0, 11): ('○○○○○○○○○○○', 0),\n",
+       " (0, 12): ('○○○○○○○○○○○○', 0),\n",
+       " (0, 13): ('○○○○○○○○○○○○○', 0),\n",
+       " (0, 14): ('○○○○○○○○○○○○○○', 0),\n",
+       " (0, 15): ('○○○○○○○○○○○○○○○', 0),\n",
+       " (1, 0): ('▢', 0),\n",
+       " (1, 1): ('▢○', 0),\n",
+       " (1, 2): ('○A', 1),\n",
+       " (1, 3): ('○○A', 1),\n",
+       " (1, 4): ('○○A○', 1),\n",
+       " (1, 5): ('○○A○○', 1),\n",
+       " (1, 6): ('○○A○○○', 1),\n",
+       " (1, 7): ('○○A○○○○', 1),\n",
+       " (1, 8): ('○○A○○○○○', 1),\n",
+       " (1, 9): ('○○○○○○○○A', 1),\n",
+       " (1, 10): ('○○○○○○○○○A', 1),\n",
+       " (1, 11): ('○○○○○○○○○A○', 1),\n",
+       " (1, 12): ('○○○○○○○○○○○A', 1),\n",
+       " (1, 13): ('○○○○○○○○○○○A○', 1),\n",
+       " (1, 14): ('○○○○○○○○○○○A○○', 1),\n",
+       " (1, 15): ('○○○○○○○○○○○○○○A', 1),\n",
+       " (2, 0): ('▢▢', 0),\n",
+       " (2, 1): ('▢▢○', 0),\n",
+       " (2, 2): ('○A▢', 1),\n",
+       " (2, 3): ('○A▢○', 1),\n",
+       " (2, 4): ('○A▢○○', 1),\n",
+       " (2, 5): ('○○A○D', 2),\n",
+       " (2, 6): ('○○A○D○', 2),\n",
+       " (2, 7): ('○○A○○○D', 2),\n",
+       " (2, 8): ('○○A○○○D○', 2),\n",
+       " (2, 9): ('○○A○○○D○○', 2),\n",
+       " (2, 10): ('○○A○○○D○○○', 2),\n",
+       " (2, 11): ('○○A○○○D○○○○', 2),\n",
+       " (2, 12): ('○○A○○○D○○○○○', 2),\n",
+       " (2, 13): ('○○A○○○D○○○○○○', 2),\n",
+       " (2, 14): ('○○A○○○D○○○○○○○', 2),\n",
+       " (2, 15): ('○○A○○○D○○○○○○○○', 2),\n",
+       " (3, 0): ('▢▢▢', 0),\n",
+       " (3, 1): ('▢▢▢○', 0),\n",
+       " (3, 2): ('○A▢▢', 1),\n",
+       " (3, 3): ('○A▢▢○', 1),\n",
+       " (3, 4): ('○A▢▢○○', 1),\n",
+       " (3, 5): ('○○A○D▢', 2),\n",
+       " (3, 6): ('○○A○DC', 3),\n",
+       " (3, 7): ('○○A○DC○', 3),\n",
+       " (3, 8): ('○○A○○○DC', 3),\n",
+       " (3, 9): ('○○A○○○DC○', 3),\n",
+       " (3, 10): ('○○A○○○DC○○', 3),\n",
+       " (3, 11): ('○○A○○○D○○○C', 3),\n",
+       " (3, 12): ('○○A○○○D○○○C○', 3),\n",
+       " (3, 13): ('○○A○○○D○○○○○C', 3),\n",
+       " (3, 14): ('○○A○○○D○○○○○C○', 3),\n",
+       " (3, 15): ('○○A○○○D○○○○○C○○', 3),\n",
+       " (4, 0): ('▢▢▢▢', 0),\n",
+       " (4, 1): ('▢▢▢▢○', 0),\n",
+       " (4, 2): ('▢▢▢○A', 1),\n",
+       " (4, 3): ('○A▢▢A', 2),\n",
+       " (4, 4): ('○A▢▢A○', 2),\n",
+       " (4, 5): ('○A▢▢A○○', 2),\n",
+       " (4, 6): ('○○A○DC▢', 3),\n",
+       " (4, 7): ('○○A○DC▢○', 3),\n",
+       " (4, 8): ('○○A○DC▢○○', 3),\n",
+       " (4, 9): ('○○A○○○DCA', 4),\n",
+       " (4, 10): ('○○A○○○DC○A', 4),\n",
+       " (4, 11): ('○○A○○○DC○A○', 4),\n",
+       " (4, 12): ('○○A○○○D○○○CA', 4),\n",
+       " (4, 13): ('○○A○○○D○○○CA○', 4),\n",
+       " (4, 14): ('○○A○○○D○○○CA○○', 4),\n",
+       " (4, 15): ('○○A○○○D○○○○○C○A', 4),\n",
+       " (5, 0): ('▢▢▢▢▢', 0),\n",
+       " (5, 1): ('▢▢▢▢▢○', 0),\n",
+       " (5, 2): ('▢▢▢▢○A', 1),\n",
+       " (5, 3): ('▢▢▢○AA', 2),\n",
+       " (5, 4): ('▢▢▢○AA○', 2),\n",
+       " (5, 5): ('▢▢▢○AA○○', 2),\n",
+       " (5, 6): ('○○A○DC▢▢', 3),\n",
+       " (5, 7): ('○○A○DC▢▢○', 3),\n",
+       " (5, 8): ('○○A○DC▢▢○○', 3),\n",
+       " (5, 9): ('○○A○DC▢○○A', 4),\n",
+       " (5, 10): ('○○A○○○DCAA', 5),\n",
+       " (5, 11): ('○○A○○○DCAA○', 5),\n",
+       " (5, 12): ('○○A○○○DC○A○A', 5),\n",
+       " (5, 13): ('○○A○○○DC○A○A○', 5),\n",
+       " (5, 14): ('○○A○○○DC○A○A○○', 5),\n",
+       " (5, 15): ('○○A○○○D○○○CA○○A', 5),\n",
+       " (6, 0): ('▢▢▢▢▢▢', 0),\n",
+       " (6, 1): ('▢▢▢▢▢B', 1),\n",
+       " (6, 2): ('▢▢▢▢▢B○', 1),\n",
+       " (6, 3): ('▢▢▢○AA▢', 2),\n",
+       " (6, 4): ('▢▢▢○AAB', 3),\n",
+       " (6, 5): ('▢▢▢○AAB○', 3),\n",
+       " (6, 6): ('▢▢▢○AAB○○', 3),\n",
+       " (6, 7): ('▢▢▢○AAB○○○', 3),\n",
+       " (6, 8): ('▢▢▢○AAB○○○○', 3),\n",
+       " (6, 9): ('○○A○DC▢○○A▢', 4),\n",
+       " (6, 10): ('○○A○○○DCAA▢', 5),\n",
+       " (6, 11): ('○○A○○○DCAA▢○', 5),\n",
+       " (6, 12): ('○○A○○○DCAA▢○○', 5),\n",
+       " (6, 13): ('○○A○○○DCAA▢○○○', 5),\n",
+       " (6, 14): ('○○A○○○DC○A○A○B', 6),\n",
+       " (6, 15): ('○○A○○○DC○A○A○B○', 6)}"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pprint_memo_table(memo_table, joiner='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "(opt, cost), memo_table = longest_common_subsequence(A=[0,1,1,2,3,5,8,13,21,34,55], \n",
+    "                                                     B=[1, 1, 2, 5, 14, 42, 132, 429, 1430, 4862, 16796, 58786, 208012, 742900, 2674440,], \n",
+    "                                                     gap_A='▢', gap_B='○', \n",
+    "                                                     #shrink_B=lambda b:1,\n",
+    "                                                     memo_table=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○,○,○,○,○,○,○,○\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(','.join(map(str, opt)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): ('', 0),\n",
+       " (0, 1): ('○', 0),\n",
+       " (0, 2): ('○,○', 0),\n",
+       " (0, 3): ('○,○,○', 0),\n",
+       " (0, 4): ('○,○,○,○', 0),\n",
+       " (0, 5): ('○,○,○,○,○', 0),\n",
+       " (0, 6): ('○,○,○,○,○,○', 0),\n",
+       " (0, 7): ('○,○,○,○,○,○,○', 0),\n",
+       " (0, 8): ('○,○,○,○,○,○,○,○', 0),\n",
+       " (0, 9): ('○,○,○,○,○,○,○,○,○', 0),\n",
+       " (0, 10): ('○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (0, 11): ('○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (0, 12): ('○,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (0, 13): ('○,○,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (0, 14): ('○,○,○,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (0, 15): ('○,○,○,○,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (1, 0): ('▢', 0),\n",
+       " (1, 1): ('▢,○', 0),\n",
+       " (1, 2): ('▢,○,○', 0),\n",
+       " (1, 3): ('▢,○,○,○', 0),\n",
+       " (1, 4): ('▢,○,○,○,○', 0),\n",
+       " (1, 5): ('▢,○,○,○,○,○', 0),\n",
+       " (1, 6): ('▢,○,○,○,○,○,○', 0),\n",
+       " (1, 7): ('▢,○,○,○,○,○,○,○', 0),\n",
+       " (1, 8): ('▢,○,○,○,○,○,○,○,○', 0),\n",
+       " (1, 9): ('▢,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (1, 10): ('▢,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (1, 11): ('▢,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (1, 12): ('▢,○,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (1, 13): ('▢,○,○,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (1, 14): ('▢,○,○,○,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (1, 15): ('▢,○,○,○,○,○,○,○,○,○,○,○,○,○,○,○', 0),\n",
+       " (2, 0): ('▢,▢', 0),\n",
+       " (2, 1): ('▢,1', 1),\n",
+       " (2, 2): ('▢,○,1', 1),\n",
+       " (2, 3): ('▢,○,1,○', 1),\n",
+       " (2, 4): ('▢,○,1,○,○', 1),\n",
+       " (2, 5): ('▢,○,1,○,○,○', 1),\n",
+       " (2, 6): ('▢,○,1,○,○,○,○', 1),\n",
+       " (2, 7): ('▢,○,1,○,○,○,○,○', 1),\n",
+       " (2, 8): ('▢,○,1,○,○,○,○,○,○', 1),\n",
+       " (2, 9): ('▢,○,1,○,○,○,○,○,○,○', 1),\n",
+       " (2, 10): ('▢,○,1,○,○,○,○,○,○,○,○', 1),\n",
+       " (2, 11): ('▢,○,1,○,○,○,○,○,○,○,○,○', 1),\n",
+       " (2, 12): ('▢,○,1,○,○,○,○,○,○,○,○,○,○', 1),\n",
+       " (2, 13): ('▢,○,1,○,○,○,○,○,○,○,○,○,○,○', 1),\n",
+       " (2, 14): ('▢,○,1,○,○,○,○,○,○,○,○,○,○,○,○', 1),\n",
+       " (2, 15): ('▢,○,1,○,○,○,○,○,○,○,○,○,○,○,○,○', 1),\n",
+       " (3, 0): ('▢,▢,▢', 0),\n",
+       " (3, 1): ('▢,▢,1', 1),\n",
+       " (3, 2): ('▢,1,1', 2),\n",
+       " (3, 3): ('▢,1,1,○', 2),\n",
+       " (3, 4): ('▢,1,1,○,○', 2),\n",
+       " (3, 5): ('▢,1,1,○,○,○', 2),\n",
+       " (3, 6): ('▢,1,1,○,○,○,○', 2),\n",
+       " (3, 7): ('▢,1,1,○,○,○,○,○', 2),\n",
+       " (3, 8): ('▢,1,1,○,○,○,○,○,○', 2),\n",
+       " (3, 9): ('▢,1,1,○,○,○,○,○,○,○', 2),\n",
+       " (3, 10): ('▢,1,1,○,○,○,○,○,○,○,○', 2),\n",
+       " (3, 11): ('▢,1,1,○,○,○,○,○,○,○,○,○', 2),\n",
+       " (3, 12): ('▢,1,1,○,○,○,○,○,○,○,○,○,○', 2),\n",
+       " (3, 13): ('▢,1,1,○,○,○,○,○,○,○,○,○,○,○', 2),\n",
+       " (3, 14): ('▢,1,1,○,○,○,○,○,○,○,○,○,○,○,○', 2),\n",
+       " (3, 15): ('▢,1,1,○,○,○,○,○,○,○,○,○,○,○,○,○', 2),\n",
+       " (4, 0): ('▢,▢,▢,▢', 0),\n",
+       " (4, 1): ('▢,▢,1,▢', 1),\n",
+       " (4, 2): ('▢,1,1,▢', 2),\n",
+       " (4, 3): ('▢,1,1,2', 3),\n",
+       " (4, 4): ('▢,1,1,2,○', 3),\n",
+       " (4, 5): ('▢,1,1,2,○,○', 3),\n",
+       " (4, 6): ('▢,1,1,2,○,○,○', 3),\n",
+       " (4, 7): ('▢,1,1,2,○,○,○,○', 3),\n",
+       " (4, 8): ('▢,1,1,2,○,○,○,○,○', 3),\n",
+       " (4, 9): ('▢,1,1,2,○,○,○,○,○,○', 3),\n",
+       " (4, 10): ('▢,1,1,2,○,○,○,○,○,○,○', 3),\n",
+       " (4, 11): ('▢,1,1,2,○,○,○,○,○,○,○,○', 3),\n",
+       " (4, 12): ('▢,1,1,2,○,○,○,○,○,○,○,○,○', 3),\n",
+       " (4, 13): ('▢,1,1,2,○,○,○,○,○,○,○,○,○,○', 3),\n",
+       " (4, 14): ('▢,1,1,2,○,○,○,○,○,○,○,○,○,○,○', 3),\n",
+       " (4, 15): ('▢,1,1,2,○,○,○,○,○,○,○,○,○,○,○,○', 3),\n",
+       " (5, 0): ('▢,▢,▢,▢,▢', 0),\n",
+       " (5, 1): ('▢,▢,1,▢,▢', 1),\n",
+       " (5, 2): ('▢,1,1,▢,▢', 2),\n",
+       " (5, 3): ('▢,1,1,2,▢', 3),\n",
+       " (5, 4): ('▢,1,1,2,▢,○', 3),\n",
+       " (5, 5): ('▢,1,1,2,▢,○,○', 3),\n",
+       " (5, 6): ('▢,1,1,2,▢,○,○,○', 3),\n",
+       " (5, 7): ('▢,1,1,2,▢,○,○,○,○', 3),\n",
+       " (5, 8): ('▢,1,1,2,▢,○,○,○,○,○', 3),\n",
+       " (5, 9): ('▢,1,1,2,▢,○,○,○,○,○,○', 3),\n",
+       " (5, 10): ('▢,1,1,2,▢,○,○,○,○,○,○,○', 3),\n",
+       " (5, 11): ('▢,1,1,2,▢,○,○,○,○,○,○,○,○', 3),\n",
+       " (5, 12): ('▢,1,1,2,▢,○,○,○,○,○,○,○,○,○', 3),\n",
+       " (5, 13): ('▢,1,1,2,▢,○,○,○,○,○,○,○,○,○,○', 3),\n",
+       " (5, 14): ('▢,1,1,2,▢,○,○,○,○,○,○,○,○,○,○,○', 3),\n",
+       " (5, 15): ('▢,1,1,2,▢,○,○,○,○,○,○,○,○,○,○,○,○', 3),\n",
+       " (6, 0): ('▢,▢,▢,▢,▢,▢', 0),\n",
+       " (6, 1): ('▢,▢,1,▢,▢,▢', 1),\n",
+       " (6, 2): ('▢,1,1,▢,▢,▢', 2),\n",
+       " (6, 3): ('▢,1,1,2,▢,▢', 3),\n",
+       " (6, 4): ('▢,1,1,2,▢,5', 4),\n",
+       " (6, 5): ('▢,1,1,2,▢,5,○', 4),\n",
+       " (6, 6): ('▢,1,1,2,▢,5,○,○', 4),\n",
+       " (6, 7): ('▢,1,1,2,▢,5,○,○,○', 4),\n",
+       " (6, 8): ('▢,1,1,2,▢,5,○,○,○,○', 4),\n",
+       " (6, 9): ('▢,1,1,2,▢,5,○,○,○,○,○', 4),\n",
+       " (6, 10): ('▢,1,1,2,▢,5,○,○,○,○,○,○', 4),\n",
+       " (6, 11): ('▢,1,1,2,▢,5,○,○,○,○,○,○,○', 4),\n",
+       " (6, 12): ('▢,1,1,2,▢,5,○,○,○,○,○,○,○,○', 4),\n",
+       " (6, 13): ('▢,1,1,2,▢,5,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (6, 14): ('▢,1,1,2,▢,5,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (6, 15): ('▢,1,1,2,▢,5,○,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (7, 0): ('▢,▢,▢,▢,▢,▢,▢', 0),\n",
+       " (7, 1): ('▢,▢,1,▢,▢,▢,▢', 1),\n",
+       " (7, 2): ('▢,1,1,▢,▢,▢,▢', 2),\n",
+       " (7, 3): ('▢,1,1,2,▢,▢,▢', 3),\n",
+       " (7, 4): ('▢,1,1,2,▢,5,▢', 4),\n",
+       " (7, 5): ('▢,1,1,2,▢,5,▢,○', 4),\n",
+       " (7, 6): ('▢,1,1,2,▢,5,▢,○,○', 4),\n",
+       " (7, 7): ('▢,1,1,2,▢,5,▢,○,○,○', 4),\n",
+       " (7, 8): ('▢,1,1,2,▢,5,▢,○,○,○,○', 4),\n",
+       " (7, 9): ('▢,1,1,2,▢,5,▢,○,○,○,○,○', 4),\n",
+       " (7, 10): ('▢,1,1,2,▢,5,▢,○,○,○,○,○,○', 4),\n",
+       " (7, 11): ('▢,1,1,2,▢,5,▢,○,○,○,○,○,○,○', 4),\n",
+       " (7, 12): ('▢,1,1,2,▢,5,▢,○,○,○,○,○,○,○,○', 4),\n",
+       " (7, 13): ('▢,1,1,2,▢,5,▢,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (7, 14): ('▢,1,1,2,▢,5,▢,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (7, 15): ('▢,1,1,2,▢,5,▢,○,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (8, 0): ('▢,▢,▢,▢,▢,▢,▢,▢', 0),\n",
+       " (8, 1): ('▢,▢,1,▢,▢,▢,▢,▢', 1),\n",
+       " (8, 2): ('▢,1,1,▢,▢,▢,▢,▢', 2),\n",
+       " (8, 3): ('▢,1,1,2,▢,▢,▢,▢', 3),\n",
+       " (8, 4): ('▢,1,1,2,▢,5,▢,▢', 4),\n",
+       " (8, 5): ('▢,1,1,2,▢,5,▢,▢,○', 4),\n",
+       " (8, 6): ('▢,1,1,2,▢,5,▢,▢,○,○', 4),\n",
+       " (8, 7): ('▢,1,1,2,▢,5,▢,▢,○,○,○', 4),\n",
+       " (8, 8): ('▢,1,1,2,▢,5,▢,▢,○,○,○,○', 4),\n",
+       " (8, 9): ('▢,1,1,2,▢,5,▢,▢,○,○,○,○,○', 4),\n",
+       " (8, 10): ('▢,1,1,2,▢,5,▢,▢,○,○,○,○,○,○', 4),\n",
+       " (8, 11): ('▢,1,1,2,▢,5,▢,▢,○,○,○,○,○,○,○', 4),\n",
+       " (8, 12): ('▢,1,1,2,▢,5,▢,▢,○,○,○,○,○,○,○,○', 4),\n",
+       " (8, 13): ('▢,1,1,2,▢,5,▢,▢,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (8, 14): ('▢,1,1,2,▢,5,▢,▢,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (8, 15): ('▢,1,1,2,▢,5,▢,▢,○,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (9, 0): ('▢,▢,▢,▢,▢,▢,▢,▢,▢', 0),\n",
+       " (9, 1): ('▢,▢,1,▢,▢,▢,▢,▢,▢', 1),\n",
+       " (9, 2): ('▢,1,1,▢,▢,▢,▢,▢,▢', 2),\n",
+       " (9, 3): ('▢,1,1,2,▢,▢,▢,▢,▢', 3),\n",
+       " (9, 4): ('▢,1,1,2,▢,5,▢,▢,▢', 4),\n",
+       " (9, 5): ('▢,1,1,2,▢,5,▢,▢,▢,○', 4),\n",
+       " (9, 6): ('▢,1,1,2,▢,5,▢,▢,▢,○,○', 4),\n",
+       " (9, 7): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○', 4),\n",
+       " (9, 8): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○,○', 4),\n",
+       " (9, 9): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○,○,○', 4),\n",
+       " (9, 10): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○,○,○,○', 4),\n",
+       " (9, 11): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○,○,○,○,○', 4),\n",
+       " (9, 12): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○,○,○,○,○,○', 4),\n",
+       " (9, 13): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (9, 14): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (9, 15): ('▢,1,1,2,▢,5,▢,▢,▢,○,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (10, 0): ('▢,▢,▢,▢,▢,▢,▢,▢,▢,▢', 0),\n",
+       " (10, 1): ('▢,▢,1,▢,▢,▢,▢,▢,▢,▢', 1),\n",
+       " (10, 2): ('▢,1,1,▢,▢,▢,▢,▢,▢,▢', 2),\n",
+       " (10, 3): ('▢,1,1,2,▢,▢,▢,▢,▢,▢', 3),\n",
+       " (10, 4): ('▢,1,1,2,▢,5,▢,▢,▢,▢', 4),\n",
+       " (10, 5): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○', 4),\n",
+       " (10, 6): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○', 4),\n",
+       " (10, 7): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○', 4),\n",
+       " (10, 8): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○,○', 4),\n",
+       " (10, 9): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○,○,○', 4),\n",
+       " (10, 10): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○,○,○,○', 4),\n",
+       " (10, 11): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○,○,○,○,○', 4),\n",
+       " (10, 12): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○,○,○,○,○,○', 4),\n",
+       " (10, 13): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (10, 14): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (10, 15): ('▢,1,1,2,▢,5,▢,▢,▢,▢,○,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (11, 0): ('▢,▢,▢,▢,▢,▢,▢,▢,▢,▢,▢', 0),\n",
+       " (11, 1): ('▢,▢,1,▢,▢,▢,▢,▢,▢,▢,▢', 1),\n",
+       " (11, 2): ('▢,1,1,▢,▢,▢,▢,▢,▢,▢,▢', 2),\n",
+       " (11, 3): ('▢,1,1,2,▢,▢,▢,▢,▢,▢,▢', 3),\n",
+       " (11, 4): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢', 4),\n",
+       " (11, 5): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○', 4),\n",
+       " (11, 6): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○', 4),\n",
+       " (11, 7): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○', 4),\n",
+       " (11, 8): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○', 4),\n",
+       " (11, 9): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○,○', 4),\n",
+       " (11, 10): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○,○,○', 4),\n",
+       " (11, 11): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○,○,○,○', 4),\n",
+       " (11, 12): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○,○,○,○,○', 4),\n",
+       " (11, 13): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (11, 14): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○,○,○,○,○,○,○', 4),\n",
+       " (11, 15): ('▢,1,1,2,▢,5,▢,▢,▢,▢,▢,○,○,○,○,○,○,○,○,○,○,○', 4)}"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pprint_memo_table(memo_table, joiner=',')"
    ]
   },
   {
